--- a/src/main/resources/static/payment.html
+++ b/src/main/resources/static/payment.html
@@ -11,12 +11,12 @@
 <script>
 var options = {
     "key": "rzp_test_RaPsJq0rZSFWD1", // Enter the Key ID generated from the Dashboard
-    "amount": "16594", // Amount is in currency subunits. 
+    "amount": "11198", // Amount is in currency subunits. 
     "currency": "INR",
     "name": "ecommerce",
     "description": "Test Transaction",
     "image": "https://example.com/your_logo",
-    "order_id": "order_S6u6bHqTxd4USP", //This is a sample Order ID. Pass the `id` obtained in the response of Step 1
+    "order_id": "order_S7GJZUTkSQN12K", //This is a sample Order ID. Pass the `id` obtained in the response of Step 1
     "callback_url": "/customers/confirm-payment/1",
     "prefill": {
         "name": "Vishwas",
